--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -75,20 +75,20 @@
   }
 }
 body {
-  background-color: #f7f7f7; 
+  background-color: #f7f7f7;
 }
 .navbar-link-active {
   position: relative;
 }
 
 .navbar-link-active::after {
-  content: '';
+  content: "";
   position: absolute;
-  bottom: -2px; 
+  bottom: -2px;
   left: 0;
   width: 100%;
   height: 2px;
-  background-color: #FF3E30;
+  background-color: #ff3e30;
   transform-origin: bottom right;
   transform: scaleX(0);
   transition: transform 0.3s ease-out;
@@ -96,6 +96,10 @@ body {
 
 .navbar-link-active::after {
   transform: scaleX(1);
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 /* @keyframes gradient-shift {
